eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 448049789776.dkr.ecr.eu-west-3.amazonaws.com/simplebank:366013f58a0c22615d34680125b4222fc96d0576
        ports:
        - containerPort: 8080
